# PLAY

./: .gitignore  README.md
include/: play.h
include/internal/: arch_interface.h
source/hello/: hello.c
source/linalg_cholesky_decomp/: linalg_cholesky_decomp.c
source/linalg_gemv/: linalg_gemv.c
source/linalg_gemv_trans/: linalg_gemv_trans.c
source/linalg_lu_decomp/: linalg_lu_decomp.c
source/linalg_lu_solve/: linalg_lu_solve.c
source/linalg_svd/: linalg_svd.c
source/linalg_svd_jacobi/: linalg_svd_jacobi.c
source/linalg_svd_lsv/: linalg_svd_lsv.c
source/matrix_memcpy/: matrix_memcpy.c
source/matrix_mul/: matrix_mul.c
source/matrix_mul_trans/: matrix_mul_trans.c
source/matrix_mul_trans_A/: matrix_mul_trans_A.c
source/matrix_mul_trans_B/: matrix_mul_trans_B.c
source/matrix_set_all/: matrix_set_all.c
source/matrix_swap_rows/: matrix_swap_rows.c
source/matrix_trans/: matrix_trans.c
source/vector_add/: vector_add.c
source/vector_axpy/: vector_axpy.c
source/vector_dot/: vector_dot.c
source/vector_memcpy/: vector_memcpy.c
source/vector_min/: vector_min.c
source/vector_mul/: arch_interface.h  vector_mul.c
source/vector_offset/: vector_offset.c
source/vector_scale/: vector_scale.c
source/vector_set_all/: vector_set_all.c
source/vector_sub/: arch_interface.h  vector_sub.c
test/_backward_test/: Makefile
test/_fdiv_latency_throughput/: Makefile
test/_fdiv_test/: Makefile
test/_vfirstm_test/: Makefile
test/_vfmacc_test/: Makefile
test/_vfmgtvf_test/: Makefile
test/vector_min/spatz/: CMakeLists.txt  Makefile  main.c
test/vector_sub/: CMakeLists.txt  Makefile  OptimizationReport.md  README.md  main.c  vector_sub.s
test/vector_sub/pulp-open/: main.c
test/vector_sub/results/: for_1c.txt  for_8c.txt  for_both_1c.txt  for_both_8c.txt  for_interleave_1c.txt  for_interleave_8c.txt  for_unroll_1c.txt  for_unroll_8c.txt  while_1c.txt  while_8c.txt  while_both_1c.txt  while_both_8c.txt  while_interleave_1c.txt  while_interleave_8c.txt  while_unroll_1c.txt  while_unroll_8c.txt
test/vector_sub/spatz/: Makefile  main.c
test/vector_sub/test_data/: data.h  generator.py
(+514 files in other folders)
